--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 /pass_hasher.py
 
 /init_matches/query.sql
-/init_matches/prov_names.sql
+/init_matches/prov_names.txt
 /init_matches/Mitgliederverwaltung Armwrestling Zurich.xlsx
 /init_matches/names.csv
 /init_matches/input_matches_main.csv
