--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,5 @@
 /init_matches/Mitgliederverwaltung Armwrestling Zurich.xlsx
 /init_matches/names.csv
 /init_matches/input_matches_main.csv
+/init_matches/output_matches_main.csv
 /init_matches/input_matches_main.xlsx
