--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /init_matches/input_matches_main.csv
 /init_matches/output_matches_main.csv
 /init_matches/input_matches_main.xlsx
+/init_matches/ARMELO_RANKING_DATA
