Added elo display in prediction

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /__pycache__
 /pass_hasher.py
 
+
 /init_matches/query.sql
 /init_matches/prov_names.txt
 /init_matches/Mitgliederverwaltung Armwrestling Zurich.xlsx
@@ -12,5 +13,7 @@
 /init_matches/input_matches_main_left.csv
 /init_matches/input_matches_main_right.xlsx
 /init_matches/input_matches_main_left.xlsx
+/init_matches/input_matches_main_left_OLD.xlsx
 /init_matches/output_matches_main.csv
 /init_matches/ARMELO_RANKING_DATA
+/init_matches/instructions.txt
